--- a/src/assets/i18n/ta.json
+++ b/src/assets/i18n/ta.json
@@ -1,5 +1,10 @@
 {
     "HELLO": "hola",
     "TITLE": "பாரதியார் கவிதைகள்",
-    "HOMEPAGE": "முகப்புப் பக்கம்"
+    "HOMEPAGE": "முகப்புப் பக்கம்",
+    "ABOUT": "பாரதியாரை பற்றி",
+    "Share_App": "பகிரவும்",
+    "SEARCH": "தேடல் பக்கம்",
+    "FAV": "பிடித்தவை",
+    "SETTINGS": "அமைப்பு"
 }
