--- a/src/assets/i18n/ta.json
+++ b/src/assets/i18n/ta.json
@@ -4,7 +4,17 @@
     "HOMEPAGE": "முகப்புப் பக்கம்",
     "ABOUT": "பாரதியாரை பற்றி",
     "Share_App": "பகிரவும்",
+    "Rate_App": "மதிப்பிடுக",
     "SEARCH": "தேடல் பக்கம்",
     "FAV": "பிடித்தவை",
-    "SETTINGS": "அமைப்பு"
+    "SETTINGS": "அமைப்பு",
+    "settings_lang": "பட்டியல் மொழி",
+    "tamil": "தமிழ்",
+    "english": "ஆங்கிலம்",
+    "search_results": "தேடல் முடிவுகள்",
+    "keyword": "நீங்கள் தேடிய",
+    "not_match": "எந்தொரு பாடலுடனோ  கவிதைவுடனோ பொருந்தவில்லை.",
+    "search_info": "குறைந்தபட்சம் மூன்று எழுத்துக்களை தட்டச்சு பண்ணவும்.",
+    "remove": "நீக்கு",
+    "no_fav_msg": "பிடித்தமான பாடல் என்று எதையும் நீங்கள் இன்னும் குறிக்கவில்லை."
 }
