--- a/src/assets/i18n/ta.json
+++ b/src/assets/i18n/ta.json
@@ -16,5 +16,15 @@
     "not_match": "எந்தொரு பாடலுடனோ  கவிதைவுடனோ பொருந்தவில்லை.",
     "search_info": "குறைந்தபட்சம் மூன்று எழுத்துக்களை தட்டச்சு பண்ணவும்.",
     "remove": "நீக்கு",
-    "no_fav_msg": "பிடித்தமான பாடல் என்று எதையும் நீங்கள் இன்னும் குறிக்கவில்லை."
+    "no_fav_msg": "பிடித்தமான பாடல் என்று எதையும் நீங்கள் இன்னும் குறிக்கவில்லை.",
+    "Notifications":"நினைவூட்டல்",
+    "Time": "நேரம்",
+    "Day": "நாள்",
+    "Monday":"திங்கள்",
+    "Tuesday":"செவ்வாய்",
+    "Wednesday":"புதன்",
+    "Thursday":"வியாழக்கிழமை",
+    "Friday":"வெள்ளி",
+    "Saturday":"சனி",
+    "Sunday":"ஞாயிறு"
 }
