--- a/src/assets/i18n/ta.json
+++ b/src/assets/i18n/ta.json
@@ -17,6 +17,8 @@
     "search_info": "குறைந்தபட்சம் மூன்று எழுத்துக்களை தட்டச்சு பண்ணவும்.",
     "remove": "நீக்கு",
     "no_fav_msg": "பிடித்தமான பாடல் என்று எதையும் நீங்கள் இன்னும் குறிக்கவில்லை.",
+    "fav_added":"பிடித்த பட்டியலில் சேர்க்கப்பட்டுள்ளது.",
+    "fav_removed":"பிடித்த பட்டியலில் இருந்து நீக்கப்பட்டுள்ளது.",
     "Notifications":"நினைவூட்டல்",
     "Time": "நேரம்",
     "Day": "நாள்",
@@ -26,5 +28,6 @@
     "Thursday":"வியாழக்கிழமை",
     "Friday":"வெள்ளி",
     "Saturday":"சனி",
-    "Sunday":"ஞாயிறு"
+    "Sunday":"ஞாயிறு",
+    "share_error": "மன்னிக்கவும். இந்த நேரத்தில் பகிர்ந்து கொள்ள முடியவில்லை."
 }
